# vimt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.133079619242F82B.idx
include/core/: AppDaemon.h  config.h  key_handler.h  mode_manager.h
src/core/: AppDaemon.mm
